# handler/rpc/views/oracle.go
@@ -7,10 +7,12 @@ import (
 
 func Oracle(oracle *core.Oracle) *api.Oracle {
 	return &api.Oracle{
-		AssetId: oracle.AssetID,
-		Hop:     int32(oracle.Hop),
-		Current: oracle.Current.String(),
-		Next:    oracle.Next.String(),
-		PeekAt:  Time(&oracle.PeekAt),
+		AssetId:   oracle.AssetID,
+		Hop:       int32(oracle.Hop),
+		Current:   oracle.Current.String(),
+		Next:      oracle.Next.String(),
+		PeekAt:    Time(&oracle.PeekAt),
+		Threshold: int32(oracle.Threshold),
+		Governors: oracle.Governors,
 	}
 }
